[project]
name = "nonebot-plugin-scheduled-broadcast"
version = "0.1.4"
description = "A customizable, adapter-independent, event-based scheduled broadcaster aiming for all nonebot2 adapters."
authors = [
    {name = "Tony Xiang", email = "tonyxfy@qq.com"},
]
dependencies = [
    "nonebot2>=2.0.0",
    "nonebot-plugin-apscheduler<1.0.0,>=0.3.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
keywords = ["nonebot2", "scheduler", "broadcast"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "nonebug>=0.3.5",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
]

[tool.black]
line-length = 127
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 127
length_sort = true
skip_gitignore = true
force_sort_within_sections = true

[tool.pyright]
pythonVersion = "3.8"
pythonPlatform = "All"
typeCheckingMode = "basic"
